# c-lib-example

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
include/mylib/: bitset.c  bitset.h  common.h  mylib.h  mylib1.c  mylib2.c
src/: mylib-all.c
test/: CMakeLists.txt  mytest.h
test/simple/: init-term.c  main.c
